--- a/package.json
+++ b/package.json
@@ -184,41 +184,43 @@
                 "icon": "$(sort-precedence)"
             },
             {
-                "command": "mywiki.commentcreateNote",
-                "title": "Create Note",
-                "enablement": "!commentIsEmpty"
+                "command": "lcpr.remarkCreateNote",
+                "title": "Create Note"
             },
             {
-                "command": "mywiki.commentreplyNote",
-                "title": "Reply",
-                "enablement": "!commentIsEmpty"
+                "command": "lcpr.remarkAdd",
+                "title": "测试新加线程?"
             },
             {
-                "command": "mywiki.commenteditNote",
-                "title": "Edit",
+                "command": "lcpr.remarkReplyNote",
+                "title": "New Note"
+            },
+            {
+                "command": "lcpr.remarkEditNote",
+                "title": "Edit Note",
                 "icon": {
                     "dark": "resources/edit_inverse.svg",
                     "light": "resources/edit.svg"
                 }
             },
             {
-                "command": "mywiki.commentdeleteNoteComment",
-                "title": "Delete",
+                "command": "lcpr.remarkDeleteNoteComment",
+                "title": "Delete Note",
                 "icon": {
                     "dark": "resources/close_inverse.svg",
                     "light": "resources/close.svg"
                 }
             },
             {
-                "command": "mywiki.commentsaveNote",
-                "title": "Save"
+                "command": "lcpr.remarkSaveNote",
+                "title": "Save Note"
             },
             {
-                "command": "mywiki.commentcancelsaveNote",
-                "title": "Cancel"
+                "command": "lcpr.remarkCancelsaveNote",
+                "title": "Cancel Note"
             },
             {
-                "command": "mywiki.commentdispose",
+                "command": "lcpr.remarkDispose",
                 "title": "Remove All Notes"
             }
         ],
@@ -246,51 +248,57 @@
         "menus": {
             "commandPalette": [
                 {
-                    "command": "mywiki.commentcreateNote",
+                    "command": "lcpr.remarkCreateNote",
                     "when": "false"
                 },
                 {
-                    "command": "mywiki.commentreplyNote",
+                    "command": "lcpr.remarkReplyNote",
                     "when": "false"
                 },
                 {
-                    "command": "mywiki.commentdeleteNoteComment",
+                    "command": "lcpr.remarkDeleteNoteComment",
                     "when": "false"
                 }
             ],
-            "comments/commentThread/title": [],
+            "comments/commentThread/title": [
+                {
+                    "command": "lcpr.remarkAdd",
+                    "group": "inline",
+                    "when": "commentController == comment-sample"
+                }
+            ],
             "comments/commentThread/context": [
                 {
-                    "command": "mywiki.commentcreateNote",
+                    "command": "lcpr.remarkCreateNote",
                     "group": "inline",
                     "when": "commentController == comment-sample && commentThreadIsEmpty"
                 },
                 {
-                    "command": "mywiki.commentreplyNote",
+                    "command": "lcpr.remarkReplyNote",
                     "group": "inline",
                     "when": "commentController == comment-sample && !commentThreadIsEmpty"
                 }
             ],
             "comments/comment/title": [
                 {
-                    "command": "mywiki.commenteditNote",
+                    "command": "lcpr.remarkEditNote",
                     "group": "group@1",
                     "when": "commentController == comment-sample"
                 },
                 {
-                    "command": "mywiki.commentdeleteNoteComment",
+                    "command": "lcpr.remarkDeleteNoteComment",
                     "group": "group@2",
                     "when": "commentController == comment-sample && comment == canDelete"
                 }
             ],
             "comments/comment/context": [
                 {
-                    "command": "mywiki.commentcancelsaveNote",
+                    "command": "lcpr.remarkCancelsaveNote",
                     "group": "inline@1",
                     "when": "commentController == comment-sample"
                 },
                 {
-                    "command": "mywiki.commentsaveNote",
+                    "command": "lcpr.remarkSaveNote",
                     "group": "inline@2",
                     "when": "commentController == comment-sample"
                 }
